--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "plotly.js-dist-min": "^2.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "plotly.js-dist-min": "^2.30.0"
+    "react-router-dom": "^7.11.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
